background och ny player

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  display: block;
 }
 
 h1 {
@@ -99,4 +100,3 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
-
